--- a/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
@@ -8,7 +8,7 @@
       <Color blue="fd" green="fd" red="e9" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Cursor Por defecto"/>
+      <Color id="Default Cursor"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -131,6 +131,9 @@
                   <Color PropertyName="color" blue="fc" green="7f" red="66" type="rgb"/>
                 </LineBorder>
               </Border>
+            </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
             </Property>
           </Properties>
           <Events>
